--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,23 @@
 body {
-    font-family: helvetica;
-    }
-
-    /*Titulo */
-h1,
-.main-title {
-font-size: 1.75rem;
-font-weight: bold;
+    font-family: sans-serif ;
+    background-color: white ;
 }
 
- /*parrafo */
-p1,
-.main-title {
-    font-size: 1rem;
-    font-weight: lighter;
-    }
+h1,
+.main-title { 
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    color: black;
+}
+
+h2,
+.main-title { 
+    text-align: center;
+    font-size: medium;
+    font-weight: bold;
+    color: black;
+}
 
 
  
