--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,91 @@
+*{ 
+    box-sizing: border-box;
+}
+
 body {
-    font-family: rajdhani ;
-    background-color: white ;
+    margin: 0;
+    font-family: Helvetica, sans-serif ;
+    background-color: red ;
 }
 
-div,
+h1 {font-size: 3.5em;}
+h2 {font-size: 2.7em;}
+h3 {font-size: 2em;}
+p {font-size: 1.25em;}
 
-.container {
-    max-width: auto;
-    margin-left: 150px;
-    margin-right: 150px;
-  }
+button{
+ 
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 10px ;
+    border: 1px solid rgba(0,0,0,0.5) ;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) ;
+    color: white;
+    background-color: black;
 
-  h1,
-.main-title { 
+}
+
+button:hover{
+
+    background-color: DimGray;
+}
+
+
+.container{
+    max-width: 1400px;
+    margin: auto
+}
+
+header{
+    background-color: white;
+     
+}
+
+header .logo{
+    margin: 0;
+    padding: 25px 30px;
+    font-weight: bold;
+    color: black;
+    font-size: 1.6em;
+
+}
+
+header .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header nav{
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    font-size: 2rem;
-    font-weight: regular 400;
+    padding-bottom: 25px;
+}
+
+header a{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
     color: black;
 }
 
-h2,
-.main-title { 
-    text-align: center;
-    font-size: medium;
-    font-weight: regular 400;
-    color: black;
+header a:hover{
+    color: red;
 }
 
-figure,
-.imagenes{
 
-    position: center;
-}
+
+
+
+
+
+
+
+
+
+
+
+
  
