--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,214 @@
-*{ 
+*{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    font-family: Helvetica, sans-serif ;
-    background-color: white;
+body{
+    font-family: 'open sans';
 }
 
-h1 {font-size: 3.5em;}
-h2 {font-size: 2.7em;}
-h3 {font-size: 2em;}
-p {font-size: 1.25em;}
-
-button{
- 
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 10px 20px;
-    border-radius: 10px ;
-    border: 1px solid rgba(0,0,0,0.5) ;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) ;
-    color: white;
-    background-color: black;
+.contenedor{
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
 }
 
-button:hover{
-
-    background-color: DimGray;
+.titulo{
+    color:black;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 60px;
 }
 
-
-.container{
-    max-width: 1400px;
-    margin: auto
-}
+/* Header */
 
 header{
-    background-color:Gainsboro;
-     
+    width: 100%;
+    height: 600px;
+    background: #373B44; 
+     /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(217, 89%, 61%, 0.636), hsla(222, 11%, 24%, 0.619)), url(../img/Fondo.jpg);
+     /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(217, 89%, 61%, 0.636), hsla(222, 11%, 24%, 0.619)), url(../img/Fondo.jpg);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
 }
 
-header .logo{
-    margin: 0;
-    padding: 25px 30px;
-    font-weight: bold;
-    color: black;
-    font-size: 1.6em;
-
+nav{
+    text-align: right;
+    padding: 30px 50px 0 0;
 }
 
-header .container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-header .nav{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 25px;
-}
-
-header a{
-    padding: 5px 12px;
-    text-decoration: none;
-    font-weight: bold;
-    color: black;
-}
-
-header a:hover{
-    color: red;
-}
-
-h2,
-#Diego-Torres.container{
-    text-align: center;
-    padding: 200px 12px;
-
-}
-
-h2,
-#mis-fotografias{
-    background-color:black;
+nav > a{
     color: white;
+    font-weight: 300;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+nav > a:hover{
+    text-decoration: underline;
+}
+
+header .textos-header{
+    display: flex;
+    height: 430px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
 }
 
-#mis-fotografias.container{
-    padding: 150px 12px;
+.textos-header h1{
+    font-size: 50px;
+    color: white;
 }
 
-#mis-fotografias h2{
-    margin-top: 0
+.textos-header h2{
+    font-size: 30px;
+    font-weight: 300;
+    color: white;
 }
 
-#mis-fotografias p{
-    display: none;
+.wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
-#mis-fotografias .carta{
+/*about us */
+
+.contenedor-sobre-nosotros{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.imagen-about-us{
+    width: 48%;
+}
+
+.sobre-nosotros .contenido-textos{
+    width: 48%;
+}
+
+.contenido-textos h3{
+   margin-bottom: 15px;
+}
+
+.contenido-textos h3 span{
+    background: black;
+    color: white;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    box-shadow: 0 0 6px black;
+    margin-right: 5px;
+}
+
+.contenido-textos p{
+    padding: 0px 0px 30px 15px;
+    font-weight: 300;
+    text-align: justify;
+ }
+
+ /* Galería */
+
+ .camisetas{
+    background: white;
+ }
+
+.galeria-camisetas{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+} 
+
+.imagen-camisetas{
+    width: 24%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 black;
+}
+
+.imagen-camisetas > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hover-galeria{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: hsla(0, 0%, 0%, 0.855);
+    transition: trasform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hover-galeria img{
+    width: 50px;
+}
+
+.hover-galeria p{
+    color: white;
+}
+
+.imagen-camisetas:hover .hover-galeria{
+    transform: scale(1);
+}
+
+/*creador*/
+
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cards .card{
+    background: white;
+    display: flex;
+    width: 46%;
+    height: 200%;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: white;
 
 }
 
-h3,
-.carta:first-child{
-    background-image: linear-gradient(
-        0deg
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url(img/abuelolluvia.jpg);
+.cards .card img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid black;
+    border-radius: 50%;
+    display: block;
 }
 
-h3,
-.carta:nth-child(2){
-        background-image: linear-gradient(
-            0deg
-            rgba(0,0,0,0.5),
-            rgba(0,0,0,0.5)
-        )
-        ,url("img/ave1.JPG") 
-        
+.cards .card > .contenido-texto-card{
+    width: 60%;
+    color: black;
 }
 
-h3,
-.carta:nth-child(3){
-            background-image: linear-gradient(
-                0deg
-                rgba(0,0,0,0.5),
-                rgba(0,0,0,0.5)
-            )
-            ,url("img/casa1.JPG")   
-    
-
+.cards .card > .contenido-texto-card p{
+    font-weight: 300;
+    padding-top: 5px;
 }
 
-
-
-
-
-
-
-
-
-
- 
