--- a/css/style.css
+++ b/css/style.css
@@ -99,20 +99,10 @@ header .textos-header{
 
 .contenido-textos h3{
    margin-bottom: 15px;
+   padding: 0px 0px 30px 15px;
+   text-align: left;
 }
 
-.contenido-textos h3 span{
-    background: black;
-    color: white;
-    border-radius: 50%;
-    display: inline-block;
-    text-align: center;
-    width: 30px;
-    height: 30px;
-    padding: 2px;
-    box-shadow: 0 0 6px black;
-    margin-right: 5px;
-}
 
 .contenido-textos p{
     padding: 0px 0px 30px 15px;
@@ -182,7 +172,7 @@ header .textos-header{
 }
 
 .cards .card{
-    background: white;
+    background: rgb(10, 10, 48);
     display: flex;
     width: 46%;
     height: 200%;
@@ -194,8 +184,8 @@ header .textos-header{
 }
 
 .cards .card img{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
     border: 3px solid black;
     border-radius: 50%;
@@ -204,11 +194,11 @@ header .textos-header{
 
 .cards .card > .contenido-texto-card{
     width: 60%;
-    color: black;
+    color: white;
 }
 
 .cards .card > .contenido-texto-card p{
     font-weight: 300;
-    padding-top: 5px;
+    padding: 5px;
 }
 
