--- a/css/style.css
+++ b/css/style.css
@@ -132,13 +132,13 @@ header .textos-header{
 #camisetas .carta{
     background-position: center center;
     background-size: cover;
-    padding: 20px;
+    padding: 50px;
     margin: 10px;
     border-radius: 15px;
     margin-bottom: 30px;
 }
 
- 
+
 .carta:first-child{
     background-image: linear-gradient(
     0deg,
@@ -176,6 +176,8 @@ header .textos-header{
     ,url("img/Especial.jpeg")
 }
 
+
+
 #camisetas .categorias{
     display: flex;
     justify-content: center;
@@ -187,44 +189,6 @@ header .textos-header{
 
 #camisetas h3{
     margin-top: 0;
-}
-
-
-/*creador*/
-
-.cards{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.cards .card{
-    background: black;
-    display: flex;
-    width: 46%;
-    height: 200px;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
-}
-
-.cards .card img{
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border: 3px solid #fff;
-    border-radius: 50%;
-    display: block;
-}
-
-.cards .card > .contenido-texto-card{
-    width: 60%;
-    color: #fff;
-}
-
-.cards .card > .contenido-texto-card p{
-    font-weight: 300;
-    padding-top: 5px;
 }
 
  /* Camisetas Local */
@@ -324,3 +288,173 @@ header .textos-header{
     text-align: center;
 }
 
+/*Fotografias*/
+
+.fondo-distinto2 {
+    width: 100%;
+    height: 600px;
+    background: #373B44; 
+     /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(218, 24%, 80%, 0.64), hsla(222, 11%, 24%, 0.619)), url(../img/fondofotos.JPG);
+     /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(217, 12%, 37%, 0.636), hsla(222, 11%, 24%, 0.619)), url(../img/fondofotos.JPG);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+#imagenes{
+    background-color: hwb(214 29% 68% / 0.989);
+    color: white;
+    text-align: center;
+} 
+
+ #imagenes .contenedor{
+    padding: 100px 0px;
+}
+
+#imagenes h2{
+    margin-top: 0;
+    color: white;
+
+}
+
+#imagenes p{
+    display: none;
+}
+
+#imagenes .foto-fondo2{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px;
+    margin: 10px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+
+#imagenes .foto-fondo3{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px;
+    margin: 10px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+ 
+.foto-fondo2{
+    background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+    )
+    ,url("img/blanco.jpg");
+}
+
+.foto-fondo3{
+    background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+    )
+    ,url("img/color.JPG");
+}
+
+#imagenes .categorias{
+    display: flex;
+    justify-content: center;
+}
+
+#imagenes p{
+    display: block;
+}
+
+#imagenes h3{
+    margin-top: 0;
+}
+
+/*inicio*/
+
+.fondo-distinto {
+    width: 100%;
+    height: 600px;
+    background: #373B44; 
+     /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(112, 28%, 27%, 0.856), hsla(222, 11%, 24%, 0.619)), url(../img/Fondodiego.JPG);
+     /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(96, 63%, 8%, 0.755), hsla(222, 11%, 24%, 0.619)), url(../img/Fondodiego.JPG);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+#tipo{
+    background-color: hwb(133 7% 83% / 0.908);
+    color: white;
+    text-align: center;
+} 
+
+ #tipo .contenedor{
+    padding: 100px 0px;
+}
+
+#tipo h2{
+    margin-top: 0;
+    color: white;
+
+}
+
+#tipo p{
+    display: none;
+}
+
+
+#tipo .foto-fondo{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px;
+    margin: 10px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+ 
+.foto-fondo{
+    background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+    )
+    ,url("img/collage.jpg");
+}
+
+#tipo .foto-fondo4{
+    background-position: center center;
+    background-size: cover;
+    padding: 50px;
+    margin: 10px;
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+ 
+.foto-fondo4{
+    background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+    )
+    ,url("img/Local.jpeg");
+}
+
+#tipo .categorias{
+    display: flex;
+    justify-content: center;
+}
+
+#tipo p{
+    display: block;
+}
+
+#tipo h3{
+    margin-top: 0;
+}
