--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ footer{
     overflow: hidden;
 }
 
-.titulo-final{
+.titulo-final3{
     font-size: 10px;
     font-weight: lighter;
     text-align: center;
